--- a/ajaxStore.html
+++ b/ajaxStore.html
@@ -27,42 +27,7 @@
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script>
-    (function() {
-        "use strict";
-        // TODO: Create an AJAX GET request for the file under data/inventory.json
-        const storeItems = $.ajax("data/inventory.json");
-
-        function showItem(item){
-            return (
-                '<tr><td>'
-                + item.title
-                + '</td><td>'
-                + item.quantity
-                + '</td><td>'
-                + item.price
-                + '</td><td>'
-                + item.categories
-                + '</td></tr>'
-            );
-        }
-
-        function onSuccess(data){
-            let displayItem = '';
-            data.forEach(function(item){
-                displayItem += showItem(item);
-            })
-            $('#insertProducts').append(displayItem);
-        }
-
-        // TODO: Take the data from inventory.json and append it to the products table
-        //       HINT: Your data should come back as a JSON object; use console.log() to inspect
-        //             its contents and fields
-        //       HINT: You will want to target #insertProducts for your new HTML elements
-
-        storeItems.done(onSuccess);
-    })();
-</script>
+<script src="js/ajaxStore.js"></script>
 
 </body>
 </html>
