added 'Refresh Inventory' button

--- a/ajaxStore.html
+++ b/ajaxStore.html
@@ -23,6 +23,7 @@
         </thead>
         <tbody id="insertProducts"></tbody>
     </table>
+    <button id="refresh">Refresh Inventory</button>
 </main>
 
 
