added label-input groups to add to inventory.json

--- a/ajaxStore.html
+++ b/ajaxStore.html
@@ -23,6 +23,35 @@
         </thead>
         <tbody id="insertProducts"></tbody>
     </table>
+    <h3>Add Item</h3>
+<!--ITEM NAME-->
+    <div class="mb-3 row">
+        <label for="itemName" class="col-sm-2 col-form-label">Item: </label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="itemName">
+        </div>
+    </div>
+<!--ITEM QUANTITY-->
+    <div class="mb-3 row">
+        <label for="itemQuantity" class="col-sm-2 col-form-label">Quantity: </label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" id="itemQuantity">
+        </div>
+    </div>
+<!--ITEM PRICE-->
+    <div class="mb-3 row">
+        <label for="itemPrice" class="col-sm-2 col-form-label">Price Per: </label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" id="itemPrice">
+        </div>
+    </div>
+<!--ITEM CATEGORIES-->
+    <div class="mb-3 row">
+        <label for="itemCategories" class="col-sm-2 col-form-label">Categories: </label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" id="itemCategories">
+        </div>
+    </div>
     <button id="refresh">Refresh Inventory</button>
 </main>
 
