--- a/ajaxStore.html
+++ b/ajaxStore.html
@@ -49,7 +49,7 @@
     <div class="mb-3 row">
         <label for="itemCategories" class="col-sm-2 col-form-label">Categories: </label>
         <div class="col-sm-10">
-            <input type="number" class="form-control" id="itemCategories">
+            <input type="text" class="form-control" id="itemCategories">
         </div>
     </div>
     <button id="refresh">Refresh Inventory</button>
