--- a/reactPractice.html
+++ b/reactPractice.html
@@ -5,12 +5,37 @@
     <title>Reacting with React</title>
 </head>
 <body>
-<div id="like_button_container"></div>
+<!--<div id="like_button_container"></div>-->
+
+<h2>Add React in One Minute</h2>
+<p>This page demonstrates using React with no build tooling.</p>
+<p>React is loaded as a script tag.</p>
+
+<p>
+    This is the first comment.
+    <!-- We will put our React component inside this div. -->
+<div class="like_button_container" data-commentid="1"></div>
+</p>
+
+<p>
+    This is the second comment.
+    <!-- We will put our React component inside this div. -->
+<div class="like_button_container" data-commentid="2"></div>
+</p>
+
+<p>
+    This is the third comment.
+    <!-- We will put our React component inside this div. -->
+<div class="like_button_container" data-commentid="3"></div>
+</p>
 
 <!-- Load React. -->
 <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
 <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+<!--For production if every needed-->
+<!--<script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>-->
+<!--<script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>-->
 
 <!-- Load our React component. -->
 <script src="js/like_button.js"></script>
